--- a/Example.ipynb
+++ b/Example.ipynb
@@ -2,7 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/bin/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.executable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +51,7 @@
     "from frog import PCGPAlgorithm, padded_trace, calculate_fwhm\n",
     "\n",
     "# 1. Load your preprocessed FROG trace\n",
-    "exp_trace = np.loadtxt('/Users/nihalfaiz/Documents/4th Year Project/CODE/preprocessed trace.txt')\n",
+    "exp_trace = np.loadtxt('preprocessed trace.txt')\n",
     "exp_trace = exp_trace - 52\n",
     "exp_trace = exp_trace / np.max(exp_trace)  # Normalize the trace\n",
     "exp_trace[exp_trace < 0] = 0  # Set negative values to zero\n",
