--- a/Example.ipynb
+++ b/Example.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from frog import PCGPAlgorithm, padded_trace, calculate_fwhm\n",
+    "from frog import PCGPAlgorithm, padded_trace, calculate_fwhm, VanillaFROG\n",
     "\n",
     "# 1. Load your preprocessed FROG trace\n",
     "exp_trace = np.loadtxt('preprocessed trace.txt')\n",
